refactor (PR 코멘트 5번 대응 수정)
PR 코멘트 5번에 대응 수정
- Pattern 객체를 1번만 생성하도록 static 변수화